--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
                      <div class="header__images">
                         <img src="images/3.png" alt="" class="header__img">
                      </div>
-                     <div class="header__button">
-                        <a href="#" class="header__btn">
+                     <div class="block-button header__button">
+                        <a href="#" class="block-btn header__btn">
                            Забронировать
                         </a>
                      </div>
@@ -151,7 +151,7 @@
          <section class="snowmobile-tours" id="snowmobile">
             <div class="tours__inner">
                <div class="container">
-                  <div class="title-block">
+                  <div class="title-block snowmobile-tours__title-block">
                      <h3 class="sub-title">
                         Что мы предлагаем
                      </h3>
@@ -159,6 +159,118 @@
                         туры на снегоходах
                      </h2>
                   </div>
+                  <div class="tours__cards">
+                     <ul class="tours__items">
+                        <li class="tours__item">
+                           <div class="card__title">
+                              Тур «Верблюды»
+                           </div>
+                           <div class="card__content">
+                              <a href="#" class="images__card">
+                                 <img src="images/tour/1.jpg" alt="" class="img__card">
+                              </a>
+                              <div class="tour__price">
+                                 2500р.
+                              </div>
+                              <div class="text-box">
+                                 <p class="tour__text   tour__text-top">
+                                    "Верблюдами" в Шерегеше называют скалы-останцы, расположенные на склоне горы
+                                    Курган.
+                                    Образовались они в результате выхода магмы на земную поверхность. А потом под
+                                    воздействием воды, ветра и мороза она разрушались, приобретая в результате столь
+                                    причудливые формы. Один из останцев напоминает лежащего верблюда. А кто-то и во
+                                    всей
+                                    скальной гряде может различить караван кораблей пустыни.
+                                 </p>
+                                 <p class="tour__text">
+                                    Наши гиды будут вас сопровождать к этим скалам. Советуем потеплее одеться, так
+                                    как
+                                    на снегоходах двигаться будет довольно быстро.
+                                 </p>
+                              </div>
+                              <div class="block-button card__button">
+                                 <a href="#" class="block-btn card__btn">
+                                    Забронировать
+                                 </a>
+                              </div>
+                           </div>
+                        </li>
+
+                        <li class="tours__item">
+                           <div class="card__title">
+                              Тур «Пони»
+                           </div>
+                           <div class="card__content">
+                              <a href="#" class="images__card">
+                                 <img src="images/tour/1.jpg" alt="" class="img__card">
+                              </a>
+                              <div class="tour__price">
+                                 3500р.
+                              </div>
+                              <div class="text-box">
+                                 <p class="tour__text tour__text-top">
+                                    "Верблюдами" в Шерегеше называют скалы-останцы, расположенные на склоне горы
+                                    Курган.
+                                    Образовались они в результате выхода магмы на земную поверхность. А потом под
+                                    воздействием воды, ветра и мороза она разрушались, приобретая в результате столь
+                                    причудливые формы. Один из останцев напоминает лежащего верблюда. А кто-то и во
+                                    всей
+                                    скальной гряде может различить караван кораблей пустыни.
+                                 </p>
+                                 <p class="tour__text">
+                                    Наши гиды будут вас сопровождать к этим скалам. Советуем потеплее одеться, так
+                                    как
+                                    на снегоходах двигаться будет довольно быстро.
+                                 </p>
+                              </div>
+                              <div class="block-button card__button">
+                                 <a href="#" class="block-btn card__btn">
+                                    Забронировать
+                                 </a>
+                              </div>
+                           </div>
+                        </li>
+
+                        <li class="tours__item">
+                           <div class="card__title">
+                              Тур «Зайцы»
+                           </div>
+                           <div class="card__content">
+                              <a href="#" class="images__card">
+                                 <img src="images/tour/1.jpg" alt="" class="img__card">
+                              </a>
+                              <div class="tour__price">
+                                 5500р.
+                              </div>
+                              <div class="text-box">
+                                 <p class="tour__text tour__text-top">
+                                    "Верблюдами" в Шерегеше называют скалы-останцы, расположенные на склоне горы
+                                    Курган.
+                                    Образовались они в результате выхода магмы на земную поверхность. А потом под
+                                    воздействием воды, ветра и мороза она разрушались, приобретая в результате столь
+                                    причудливые формы. Один из останцев напоминает лежащего верблюда. А кто-то и во
+                                    всей
+                                    скальной гряде может различить караван кораблей пустыни.
+                                 </p>
+                                 <p class="tour__text">
+                                    Наши гиды будут вас сопровождать к этим скалам. Советуем потеплее одеться, так
+                                    как
+                                    на снегоходах двигаться будет довольно быстро.
+                                 </p>
+                              </div>
+                              <div class="block-button card__button">
+                                 <a href="#" class="block-btn card__btn">
+                                    Забронировать
+                                 </a>
+                              </div>
+                           </div>
+                        </li>
+
+                     </ul>
+                  </div>
+
+
+
                </div>
             </div>
          </section>
